refactor:  Use StandardCharsets.UTF_8 code, not lookup on "UTF-8"